--- a/package.json
+++ b/package.json
@@ -15,22 +15,32 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.8",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-    "@react-navigation/elements": "^2.2.5",
+    "@sentry/react-native": "~6.3.0",
     "expo": "~52.0.18",
+    "expo-application": "~6.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.2",
+    "expo-file-system": "~18.0.7",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image": "^2.0.4",
     "expo-linking": "~7.0.3",
+    "expo-localization": "~16.0.1",
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "graphql": "^16.10.0",
+    "posthog-react-native": "^3.6.3",
+    "posthog-react-native-session-replay": "^0.1.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
