--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ dist/
 web-build/
 expo-env.d.ts
 
+.env
+
 # Native
 *.orig.*
 *.jks
@@ -35,4 +37,5 @@ yarn-error.*
 # typescript
 *.tsbuildinfo
 
-app-example
+# vscode
+.vscode/
