--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -22,6 +23,8 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@sentry/react-native": "~6.3.0",
+    "@shopify/flash-list": "1.7.3",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.18",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.1",
