--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "graphql-codegen": "graphql-codegen --config shared/graphql/codegen.ts"
   },
   "jest": {
     "preset": "jest-expo"
@@ -18,6 +19,12 @@
   "dependencies": {
     "@apollo/client": "^3.12.8",
     "@expo/vector-icons": "^14.0.4",
+    "@graphql-codegen/cli": "5.0.3",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@graphql-codegen/typescript": "4.1.2",
+    "@graphql-codegen/typescript-document-nodes": "4.0.12",
+    "@graphql-codegen/typescript-operations": "^4.4.0",
+    "@graphql-codegen/typescript-resolvers": "4.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
