--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@graphql-codegen/typescript-document-nodes": "4.0.12",
     "@graphql-codegen/typescript-operations": "^4.4.0",
     "@graphql-codegen/typescript-resolvers": "4.4.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
