--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-edge-to-edge": "^1.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
