--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "inkverse",
+    "name": "Inkverse",
     "slug": "inkverse",
-    "version": "1.0.0",
+    "version": "3.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icons/ios-light.png",
     "scheme": "inkverse",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -12,7 +12,6 @@
     "ios": {
       "bundleIdentifier": "art.bamcomics.taddy",
       "buildNumber": "3.0.0",
-      "displayName": "Inkverse",
       "supportsTablet": true,
       "infoPlist": {
         "LSApplicationQueriesSchemes": [
@@ -28,10 +27,9 @@
     },
     "android": {
       "package": "com.bamtoons",
-      "versionCode": 1,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/icons/adaptive-icon.png",
+        "backgroundColor": "#FFE9E4"
       },
       "permissions": [
         "android.permission.INTERNET"
@@ -58,6 +56,14 @@
           "organization": "inkverse",
           "project": "react-native",
           "url": "https://sentry.io/"
+        }
+      ],
+      [
+        "expo-splash-screen",
+        {
+          "backgroundColor": "#FFE9E4",
+          "image": "./assets/images/inkverse-logo.png",
+          "imageWidth": 200
         }
       ],
       "expo-localization",
