--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@sentry/react-native": "~6.3.0",
     "@shopify/flash-list": "1.7.3",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.18",
+    "expo": "^52.0.43",
     "expo-application": "~6.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -60,7 +60,7 @@
     "posthog-react-native-session-replay": "^0.1.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-edge-to-edge": "^1.4.3",
     "react-native-gesture-handler": "~2.20.2",
