--- a/package.json
+++ b/package.json
@@ -40,21 +40,21 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.43",
     "expo-application": "~6.0.2",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.19",
-    "expo-device": "~7.0.2",
-    "expo-file-system": "~18.0.7",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "^2.0.4",
-    "expo-linking": "~7.0.3",
+    "expo-device": "~7.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.7",
+    "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
-    "expo-splash-screen": "~0.29.19",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.9",
+    "expo-web-browser": "~14.0.2",
     "graphql": "^16.10.0",
     "posthog-react-native": "^3.6.3",
     "posthog-react-native-session-replay": "^0.1.9",
@@ -66,7 +66,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "^5.0.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
@@ -80,7 +80,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "@types/sanitize-html": "^2.13.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
