--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 15.0.14",
-    "appVersionSource": "remote"
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
@@ -18,7 +18,10 @@
       }
     },
     "production": {
-      "autoIncrement": true,
+      "autoIncrement": false,
+      "android": {
+        "buildType": "app-bundle"
+      },
       "env": {
         "SENTRY_AUTH_TOKEN": "SENTRY_AUTH_TOKEN"
       }
@@ -28,6 +31,9 @@
     "production": {
       "android": {
         "track": "production"
+      },
+      "ios": {
+        "ascAppId": "1667961953"
       }
     }
   }
